--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta property="og:title" content="evolve-website-main" />
     <meta property="og:description" content="evolve-website-main" />
     <meta property="og:type" content="website" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/favicon.svg" />
+<link rel="icon" type="image/svg" sizes="32x32" href="/public/favicon.svg" />
+<link rel="icon" type="image/svg" sizes="16x16" href="/public/favicon.svg" />
+<link rel="manifest" href="/site.webmanifest" />
     <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   
 <!-- Google tag (gtag.js) -->
